--- a/front-end/YouTune/src/styles.scss
+++ b/front-end/YouTune/src/styles.scss
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+@import './assets/scss/imports';
+
+body,
+html {
+  font-family: $font-primary;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+// OVERRIDING BOOTSTRAP STYLES
+.form-control {
+  &:focus {
+    border-color: $color-primary !important;
+    box-shadow: 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.075) inset,
+      0px 0px 0.4rem rgba($color-primary, 0.9) !important;
+  }
+}
+
+.btn {
+  background-color: $color-primary !important;
+  font-weight: 600 !important;
+  box-shadow: $box-shadow-vsm;
+  border: none !important;
+  transition: all 0.3s !important;
+
+  &:hover {
+    background-color: $color-secondary !important;
+  }
+
+  &:active {
+    transform: scale(0.94);
+    box-shadow: $box-shadow-vsm !important;
+  }
+
+  &:focus {
+    box-shadow: $box-shadow-vsm !important;
+  }
+}
