--- a/front-end/YouTune/src/app/app.component.html
+++ b/front-end/YouTune/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="container-fluid">
-  <router-outlet></router-outlet>
+<div class="container-fluid" [@routingAnimation]="o.isActivated ? o.activatedRoute : ''">
+  <router-outlet #o="outlet"></router-outlet>
 </div>
