--- a/front-end/YouTune/src/app/shared/welcome/welcome.component.scss
+++ b/front-end/YouTune/src/app/shared/welcome/welcome.component.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/scss/imports';
 
-.login {
+.welcome {
   position: relative;
   display: flex;
   width: 100%;
@@ -17,7 +17,7 @@
       top: 0;
       right: 0;
       font-weight: 700;
-      font-size: 4rem;
+      font-size: 5rem;
       color: $color-secondary;
       text-shadow: $text-shadow-lg;
     }
@@ -34,15 +34,15 @@
       top: 0;
       left: 0;
       font-weight: 700;
-      font-size: 4rem;
+      font-size: 5rem;
       color: $color-primary;
       text-shadow: $text-shadow-lg;
     }
   }
 
-  &_form {
-    background-color: $color-tertiary;
-    padding: 1rem;
-    box-shadow: $box-shadow-lg;
+  &_router-outlet {
+    width: 100%;
+    height: 100%;
   }
+
 }
