--- a/front-end/YouTune/src/styles.scss
+++ b/front-end/YouTune/src/styles.scss
@@ -13,6 +13,8 @@ html {
 
 // OVERRIDING BOOTSTRAP STYLES
 .form-control {
+  transition: all .4s !important;
+
   &:focus {
     border-color: $color-primary !important;
     box-shadow: 0px 0.2rem 0.2rem rgba(0, 0, 0, 0.075) inset,
@@ -39,4 +41,16 @@ html {
   &:focus {
     box-shadow: $box-shadow-vsm !important;
   }
+}
+
+a,
+a:active,
+a:visited {
+  color: $color-tertiary !important;
+  text-decoration: none !important;
+}
+
+a:hover {
+  color: $color-primary !important;
+  text-decoration: none !important;
 }
