--- a/front-end/YouTune/src/app/shared/login-form/login-form.component.html
+++ b/front-end/YouTune/src/app/shared/login-form/login-form.component.html
@@ -1,18 +1,30 @@
 <div class="login absolute-center">
-  <form class="form rounded">
+  <form class="login_form rounded">
     <div class="form-group">
       <label for="exampleInputEmail1">Username</label>
-      <input type="email" class="form-control" id="Username" aria-describedby="emailHelp"
-        placeholder="Enter username" />
+      <input
+        type="email"
+        class="form-control"
+        id="Username"
+        aria-describedby="emailHelp"
+        placeholder="Enter username"
+      />
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" />
+      <input
+        type="password"
+        class="form-control"
+        id="exampleInputPassword1"
+        placeholder="Password"
+      />
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
+  <p class="login_info">
+    If you don't have an account click
+    <a class="login_info-register" [routerLink]="['/welcome/register']"
+      >REGISTER</a
+    >
+  </p>
 </div>
-<p class="info">
-  If you dont have an account click
-  <a class="info_register" [routerLink]="['/welcome/register']">REGISTER</a>
-</p>
