--- a/front-end/YouTune/src/app/shared/login-form/login-form.component.scss
+++ b/front-end/YouTune/src/app/shared/login-form/login-form.component.scss
@@ -1,22 +1,28 @@
 @import '../../../assets/scss/imports';
 
-.form {
-  background-color: $color-tertiary;
-  padding: 1rem;
-  box-shadow: $box-shadow-lg;
-}
+.login {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-.info {
-  position: absolute;
-  bottom: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  color: $color-tertiary;
-  font-size: 1.5rem;
-  text-shadow: $text-shadow-sm;
+  &_form {
+    background-color: $color-tertiary;
+    padding: 1rem;
+    box-shadow: $box-shadow-lg;
+  }
 
-  &_register {
-    font-weight: 700;
-    letter-spacing: .3rem;
+  &_info {
+    margin-top: 2rem;
+    color: $color-tertiary;
+    font-size: 1.25rem;
+    text-shadow: $text-shadow-sm;
+    text-align: center;
+
+    &-register {
+      font-weight: 700;
+      letter-spacing: 0.3rem;
+      text-decoration: underline !important;
+    }
   }
 }
