--- a/front-end/YouTune/src/app/shared/register-form/register-form.component.html
+++ b/front-end/YouTune/src/app/shared/register-form/register-form.component.html
@@ -1,18 +1,43 @@
-<form class="form absolute-center rounded">
-  <div class="form-group">
-    <label for="exampleInputEmail1">Username</label>
-    <input type="email" class="form-control" id="Username" aria-describedby="emailHelp" placeholder="Enter username" />
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" />
-  </div>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-      placeholder="Enter email" />
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
+<div class="register absolute-center">
+  <form class="register_form rounded">
+    <div class="form-group">
+      <label for="exampleInputEmail1">Username</label>
+      <input
+        type="email"
+        class="form-control"
+        id="Username"
+        aria-describedby="emailHelp"
+        placeholder="Enter username"
+      />
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="exampleInputPassword1"
+        placeholder="Password"
+      />
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input
+        type="email"
+        class="form-control"
+        id="exampleInputEmail1"
+        aria-describedby="emailHelp"
+        placeholder="Enter email"
+      />
+      <small id="emailHelp" class="form-text text-muted"
+        >We'll never share your email with anyone else.</small
+      >
+    </div>
 
-  <button type="submit" class="btn btn-primary">Register</button>
-</form>
+    <button type="button" class="btn btn-primary" (click)="test()">
+      Register
+    </button>
+  </form>
+  <p class="register_info">
+    Fill in the form to register.
+  </p>
+</div>
