--- a/front-end/YouTune/src/app/shared/register-form/register-form.component.scss
+++ b/front-end/YouTune/src/app/shared/register-form/register-form.component.scss
@@ -1,7 +1,22 @@
 @import '../../../assets/scss/imports';
 
-.form {
-  background-color: $color-tertiary;
-  padding: 1rem;
-  box-shadow: $box-shadow-lg;
+.register {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &_form {
+    background-color: $color-tertiary;
+    padding: 1rem;
+    box-shadow: $box-shadow-lg;
+  }
+
+  &_info {
+    margin-top: 2rem;
+    color: $color-tertiary;
+    font-size: 1.25rem;
+    text-shadow: $text-shadow-sm;
+    text-align: center;
+  }
 }
