--- a/front-end/YouTune/src/app/components/login-form/login-form.component.html
+++ b/front-end/YouTune/src/app/components/login-form/login-form.component.html
@@ -1,5 +1,9 @@
 <div class="login absolute-center">
-  <form class="login_form rounded">
+  <form
+    class="login_form rounded"
+    [formGroup]="loginFrom"
+    (ngSubmit)="onLogin()"
+  >
     <div class="form-group">
       <label for="exampleInputEmail1">Username</label>
       <input
@@ -8,6 +12,7 @@
         id="Username"
         aria-describedby="emailHelp"
         placeholder="Enter username"
+        formControlName="username"
       />
     </div>
     <div class="form-group">
@@ -17,9 +22,12 @@
         class="form-control"
         id="exampleInputPassword1"
         placeholder="Password"
+        formControlName="password"
       />
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">
+      Login
+    </button>
   </form>
   <p class="login_info">
     If you don't have an account click
