--- a/front-end/YouTune/src/app/components/register-form/register-form.component.html
+++ b/front-end/YouTune/src/app/components/register-form/register-form.component.html
@@ -1,13 +1,18 @@
 <div class="register absolute-center">
-  <form class="register_form rounded">
+  <form
+    class="register_form rounded"
+    [formGroup]="registerFrom"
+    (ngSubmit)="onRegister()"
+  >
     <div class="form-group">
       <label for="exampleInputEmail1">Username</label>
       <input
         type="email"
         class="form-control"
-        id="Username"
+        id="username"
         aria-describedby="emailHelp"
         placeholder="Enter username"
+        formControlName="username"
       />
     </div>
     <div class="form-group">
@@ -17,6 +22,7 @@
         class="form-control"
         id="exampleInputPassword1"
         placeholder="Password"
+        formControlName="password"
       />
     </div>
     <div class="form-group">
@@ -27,13 +33,14 @@
         id="exampleInputEmail1"
         aria-describedby="emailHelp"
         placeholder="Enter email"
+        formControlName="email"
       />
       <small id="emailHelp" class="form-text text-muted"
         >We'll never share your email with anyone else.</small
       >
     </div>
 
-    <button type="button" class="btn btn-primary" (click)="test()">
+    <button type="submit" class="btn btn-primary">
       Register
     </button>
   </form>
