--- a/front-end/YouTune/src/app/admin/components/panel/panel.component.html
+++ b/front-end/YouTune/src/app/admin/components/panel/panel.component.html
@@ -1,4 +1,17 @@
-<yt-header></yt-header>
-<p>
-  panel works!
-</p>
+<div class="header">
+  <mat-toolbar color="primary">
+    <span>My Application</span>
+
+  </mat-toolbar>
+</div>
+<mat-tab-group>
+  <mat-tab label="First"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ea temporibus aut asperiores
+    inventore eos fugiat necessitatibus perferendis tenetur eveniet vero, quidem quo ipsum repellat unde earum sed totam
+    odio!</mat-tab>
+  <mat-tab label="Second"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, laboriosam sapiente. Quaerat
+    eius tenetur non. Quae tempore quas tempora quisquam perferendis delectus reiciendis minima laboriosam dolores odit,
+    voluptate ducimus vero! </mat-tab>
+  <mat-tab label="Third"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed molestias, repudiandae veritatis
+    neque laudantium vitae qui! Ipsum, minima architecto aliquam tempora voluptate voluptatum quam animi provident
+    asperiores, molestiae sunt similique. </mat-tab>
+</mat-tab-group>
