--- a/front-end/YouTune/src/app/components/login-form/login-form.component.html
+++ b/front-end/YouTune/src/app/components/login-form/login-form.component.html
@@ -1,28 +1,25 @@
 <div class="login absolute-center">
-  <form
-    class="login_form rounded"
-    [formGroup]="loginFrom"
-    (ngSubmit)="onLogin()"
-  >
-    <div class="login_form-input-wrapper">
-      <mat-form-field class="example-full-width">
+  <form class="login_form rounded" [formGroup]="loginFrom" (ngSubmit)="onLogin()">
+    <div class="form-group">
+      <mat-form-field class="full-width">
         <input matInput placeholder="Username" formControlName="username" />
       </mat-form-field>
-
-      <mat-form-field class="example-full-width">
-        <input matInput placeholder="Password" formControlName="password" />
+    </div>
+    <div class="form-group">
+      <mat-form-field class="full-width">
+        <input matInput type="password" placeholder="Password" formControlName="password" />
       </mat-form-field>
-      <small id="emailHelp" class="form-text text-muted"
-        >Use numbers and mixed case letters for strong password.</small
-      >
+      <small class="form-text text-muted">Combine numbers and mixed case letters.</small>
     </div>
 
-    <button type="submit" mat-raised-button color="primary">Login</button>
+    <button type="submit" mat-raised-button color="primary"
+      matTooltip="Click the button to submit the form">Login</button>
+    <div class="spinner absolute-center" *ytSpinnerToggle>
+      <mat-spinner aria-label="loading content"></mat-spinner>
+    </div>
   </form>
   <p class="login_info">
     If you don't have an account click
-    <a class="login_info-register" [routerLink]="['/welcome/register']"
-      >REGISTER</a
-    >
+    <a class="login_info-register" [routerLink]="['/welcome/register']">REGISTER</a>
   </p>
 </div>
