--- a/front-end/YouTune/src/app/components/register-form/register-form.component.html
+++ b/front-end/YouTune/src/app/components/register-form/register-form.component.html
@@ -1,48 +1,28 @@
 <div class="register absolute-center">
-  <form
-    class="register_form rounded"
-    [formGroup]="registerFrom"
-    (ngSubmit)="onRegister()"
-  >
+  <form class="register_form rounded" [formGroup]="registerFrom" (ngSubmit)="onRegister()">
     <div class="form-group">
-      <label for="exampleInputEmail1">Username</label>
-      <input
-        type="email"
-        class="form-control"
-        id="username"
-        aria-describedby="emailHelp"
-        placeholder="Enter username"
-        formControlName="username"
-      />
+      <mat-form-field class="full-width">
+        <input matInput type="text" placeholder="Username" formControlName="username" />
+      </mat-form-field>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="exampleInputPassword1"
-        placeholder="Password"
-        formControlName="password"
-      />
+      <mat-form-field class="full-width">
+        <input matInput type="password" placeholder="Password" formControlName="password" />
+      </mat-form-field>
     </div>
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input
-        type="email"
-        class="form-control"
-        id="exampleInputEmail1"
-        aria-describedby="emailHelp"
-        placeholder="Enter email"
-        formControlName="email"
-      />
-      <small id="emailHelp" class="form-text text-muted"
-        >We'll never share your email with anyone else.</small
-      >
+      <mat-form-field class="full-width">
+        <input matInput type="email" placeholder="Email" formControlName="email" />
+      </mat-form-field>
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
 
-    <button type="submit" class="btn btn-primary">
+    <button type="submit" mat-raised-button color="primary" matTooltip="Click the button to submit the form">
       Register
     </button>
+    <div class="spinner absolute-center" *ytSpinnerToggle>
+      <mat-spinner aria-label="loading content"></mat-spinner>
+    </div>
   </form>
   <p class="register_info">
     Fill in the form to register.
