--- a/front-end/YouTune/src/app/admin/components/panel/panel.component.html
+++ b/front-end/YouTune/src/app/admin/components/panel/panel.component.html
@@ -1,17 +1,17 @@
-<div class="header">
-  <mat-toolbar color="primary">
-    <span>My Application</span>
+<yt-header></yt-header>
 
-  </mat-toolbar>
-</div>
 <mat-tab-group>
-  <mat-tab label="First"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ea temporibus aut asperiores
-    inventore eos fugiat necessitatibus perferendis tenetur eveniet vero, quidem quo ipsum repellat unde earum sed totam
-    odio!</mat-tab>
-  <mat-tab label="Second"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, laboriosam sapiente. Quaerat
-    eius tenetur non. Quae tempore quas tempora quisquam perferendis delectus reiciendis minima laboriosam dolores odit,
-    voluptate ducimus vero! </mat-tab>
-  <mat-tab label="Third"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed molestias, repudiandae veritatis
-    neque laudantium vitae qui! Ipsum, minima architecto aliquam tempora voluptate voluptatum quam animi provident
-    asperiores, molestiae sunt similique. </mat-tab>
+  <mat-tab label="First">
+
+  </mat-tab>
+  <mat-tab label="Second">
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente eos vel laudantium nesciunt ut error libero
+    reprehenderit officiis ipsum necessitatibus? Accusantium esse similique at aut. Officia, sed commodi. Natus,
+    ratione.
+  </mat-tab>
+  <mat-tab label="Third">
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente eos vel laudantium nesciunt ut error libero
+    reprehenderit officiis ipsum necessitatibus? Accusantium esse similique at aut. Officia, sed commodi. Natus,
+    ratione.
+  </mat-tab>
 </mat-tab-group>
