--- a/front-end/YouTune/src/app/components/login-form/login-form.component.scss
+++ b/front-end/YouTune/src/app/components/login-form/login-form.component.scss
@@ -24,7 +24,7 @@
     &-register {
       font-weight: 700;
       letter-spacing: 0.3rem;
-      text-decoration: underline !important;
+      text-decoration: none !important;
     }
   }
 }
