--- a/front-end/YouTune/src/app/components/welcome/welcome.component.html
+++ b/front-end/YouTune/src/app/components/welcome/welcome.component.html
@@ -5,7 +5,7 @@
   <div class="welcome_grey">
     <h1 class="welcome_grey-tune">Tune</h1>
   </div>
-  <div class="welcome_router-outlet absolute-center" [@routingAnimation]="o.isActivated ? o.activatedRoute : ''">
+  <div class="welcome_router-outlet absolute-center" [@domFader]="o.isActivated ? o.activatedRoute : ''">
     <router-outlet #o="outlet"></router-outlet>
   </div>
 </div>
