--- a/front-end/YouTune/src/styles.scss
+++ b/front-end/YouTune/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import './assets/scss/imports';
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import '@fortawesome/fontawesome-free/css/all.css';
+@import './assets/scss/imports';
+
 
 body,
 html {
