--- a/front-end/YouTune/src/app/components/login-form/login-form.component.html
+++ b/front-end/YouTune/src/app/components/login-form/login-form.component.html
@@ -14,7 +14,7 @@
 
     <button type="submit" mat-raised-button color="primary"
       matTooltip="Click the button to submit the form">Login</button>
-    <div #s class="spinner absolute-center" [@domFader]="s" *ytSpinnerToggle>
+    <div #s class="full-width_height flex-center absolute-center" [@domFader]="s" *ytSpinnerToggle>
       <mat-spinner aria-label="loading content"></mat-spinner>
     </div>
 
