--- a/front-end/YouTune/src/app/components/welcome/welcome.component.html
+++ b/front-end/YouTune/src/app/components/welcome/welcome.component.html
@@ -1,6 +1,11 @@
 <div class="welcome">
   <div class="welcome_blue">
-    <h1 class="welcome_blue-you">You</h1>
+    <h1 class="welcome_blue-you">
+      <div class="welcome_blue-you--logo">
+        <img src="../../../../assets/images/logo.png" alt="logo" class="welcome_blue-you--logo--img">
+      </div>
+      You
+    </h1>
   </div>
   <div class="welcome_grey">
     <h1 class="welcome_grey-tune">Tune</h1>
