--- a/front-end/YouTune/src/app/shared/components/header/header.component.scss
+++ b/front-end/YouTune/src/app/shared/components/header/header.component.scss
@@ -9,10 +9,23 @@
   }
 
   &_brand {
+    display: flex;
+    align-items: center;
+
+    &-logo {
+      width: 2.5rem;
+
+      &--img {
+        width: 100%;
+      }
+    }
+
     &-title {
       font-weight: 700;
       font-size: 2.5rem;
       text-shadow: $text-shadow-md;
+
+
 
       &--you {
         color: $color-secondary;
