--- a/front-end/YouTune/src/assets/scss/_utility.scss
+++ b/front-end/YouTune/src/assets/scss/_utility.scss
@@ -1,8 +1,16 @@
+// centers vertically and horizontally
 .absolute-center {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+// centers vertically and horizontally item inside using flex
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .color-primary {
@@ -11,4 +19,10 @@
 
 .full-width {
   width: 100%;
+}
+
+// 100% width adn height container
+.full-width_height {
+  width: 100%;
+  height: 100%;
 }
