--- a/front-end/YouTune/src/app/components/login-form/login-form.component.html
+++ b/front-end/YouTune/src/app/components/login-form/login-form.component.html
@@ -1,5 +1,9 @@
 <div class="login absolute-center">
-  <form class="login_form rounded" [formGroup]="loginFrom" (ngSubmit)="onLogin()">
+  <form
+    class="login_form rounded"
+    [formGroup]="loginFrom"
+    (ngSubmit)="onLogin()"
+  >
     <div class="form-group">
       <mat-form-field class="full-width">
         <input matInput placeholder="Username" formControlName="username" />
@@ -7,20 +11,39 @@
     </div>
     <div class="form-group">
       <mat-form-field class="full-width">
-        <input matInput type="password" placeholder="Password" formControlName="password" />
+        <input
+          matInput
+          type="password"
+          placeholder="Password"
+          formControlName="password"
+        />
       </mat-form-field>
-      <small class="form-text text-muted">Combine numbers and mixed case letters.</small>
+      <small class="form-text text-muted"
+        >Combine numbers and mixed case letters.</small
+      >
     </div>
 
-    <button type="submit" mat-raised-button color="primary"
-      matTooltip="Click the button to submit the form">Login</button>
-    <div #s class="full-width_height flex-center absolute-center" [@domFader]="s" *ytSpinnerToggle>
+    <button
+      type="submit"
+      mat-raised-button
+      color="primary"
+      matTooltip="Click the button to submit the form"
+    >
+      Login
+    </button>
+    <div
+      #s
+      class="full-width-height flex-center absolute-center"
+      [@domFader]="s"
+      *ytSpinnerToggle
+    >
       <mat-spinner aria-label="loading content"></mat-spinner>
     </div>
-
   </form>
   <p class="login_info">
     If you don't have an account click
-    <a class="login_info-register" [routerLink]="['/welcome/register']">REGISTER</a>
+    <a class="login_info-register" [routerLink]="['/welcome/register']"
+      >REGISTER</a
+    >
   </p>
 </div>
