--- a/front-end/YouTune/src/app/components/register-form/register-form.component.html
+++ b/front-end/YouTune/src/app/components/register-form/register-form.component.html
@@ -1,26 +1,57 @@
 <div class="register absolute-center">
-  <form class="register_form rounded" [formGroup]="registerFrom" (ngSubmit)="onRegister()">
+  <form
+    class="register_form rounded"
+    [formGroup]="registerFrom"
+    (ngSubmit)="onRegister()"
+  >
     <div class="form-group">
       <mat-form-field class="full-width">
-        <input matInput type="text" placeholder="Username" formControlName="username" />
+        <input
+          matInput
+          type="text"
+          placeholder="Username"
+          formControlName="username"
+        />
       </mat-form-field>
     </div>
     <div class="form-group">
       <mat-form-field class="full-width">
-        <input matInput type="password" placeholder="Password" formControlName="password" />
+        <input
+          matInput
+          type="password"
+          placeholder="Password"
+          formControlName="password"
+        />
       </mat-form-field>
     </div>
     <div class="form-group">
       <mat-form-field class="full-width">
-        <input matInput type="email" placeholder="Email" formControlName="email" />
+        <input
+          matInput
+          type="email"
+          placeholder="Email"
+          formControlName="email"
+        />
       </mat-form-field>
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <small id="emailHelp" class="form-text text-muted"
+        >We'll never share your email with anyone else.</small
+      >
     </div>
 
-    <button type="submit" mat-raised-button color="primary" matTooltip="Click the button to submit the form">
+    <button
+      type="submit"
+      mat-raised-button
+      color="primary"
+      matTooltip="Click the button to submit the form"
+    >
       Register
     </button>
-    <div class="spinner absolute-center" *ytSpinnerToggle>
+    <div
+      #s
+      class="full-width-height flex-center absolute-top-left"
+      [@domFader]="s"
+      *ytSpinnerToggle
+    >
       <mat-spinner aria-label="loading content"></mat-spinner>
     </div>
   </form>
