--- a/front-end/YouTune/src/app/components/register-form/register-form.component.scss
+++ b/front-end/YouTune/src/app/components/register-form/register-form.component.scss
@@ -7,6 +7,7 @@
   align-items: center;
 
   &_form {
+    position: relative;
     background-color: $color-tertiary;
     padding: 1rem;
     box-shadow: $box-shadow-lg;
