--- a/front-end/YouTune/src/assets/scss/_utility.scss
+++ b/front-end/YouTune/src/assets/scss/_utility.scss
@@ -5,7 +5,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
+.absolute-top-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 // centers vertically and horizontally item inside using flex
 .flex-center {
   display: flex;
@@ -21,8 +25,8 @@
   width: 100%;
 }
 
-// 100% width adn height container
-.full-width_height {
+// 100% width and height container
+.full-width-height {
   width: 100%;
   height: 100%;
 }
