--- a/front-end/YouTune/src/assets/scss/_variables.scss
+++ b/front-end/YouTune/src/assets/scss/_variables.scss
@@ -1,18 +1,16 @@
 // COLORS
 
-$color-primary: #3F51B5;
+$color-primary: #3f51b5;
 $color-secondary: #505050;
 $color-tertiary: #ffffff;
 
 // SHADOWS
-$google-shadow: 0 3px 5px -1px rgba(0, 0, 0, .4),
-0 6px 10px 0 rgba(0, 0, 0, .2),
-0 1px 18px 0 rgba(0, 0, 0, .2);
+$google-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.4),
+  0 6px 10px 0 rgba(0, 0, 0, 0.2), 0 1px 18px 0 rgba(0, 0, 0, 0.2);
 
-
-$box-shadow-lg: 0 0.4rem 1.5rem rgba(0, 0, 0, 0.7);
-$box-shadow-md: 0 0.2rem 1.1rem rgba(0, 0, 0, 0.7);
-$box-shadow-sm: 0 0.2rem 0.7rem rgba(0, 0, 0, 0.7);
+$box-shadow-lg: 0 0.2rem 1.25rem rgba(0, 0, 0, 0.7);
+$box-shadow-md: 0 0.2rem 1rem rgba(0, 0, 0, 0.7);
+$box-shadow-sm: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.7);
 $box-shadow-vsm: 0 0.2rem 0.25rem rgba(0, 0, 0, 0.7);
 
 $text-shadow-lg: -0.2rem 0.2rem 0.7rem rgba(0, 0, 0, 0.7);
@@ -21,5 +19,8 @@ $text-shadow-sm: -0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.7);
 
 // FONTS
 
-$font-primary: 'Titillium Web',
-sans-serif !important;
+$font-primary: 'Titillium Web', sans-serif !important;
+
+// RANDOM
+
+$header-height: 3.5rem;
