--- a/front-end/YouTune/src/app/shared/components/header/header.component.scss
+++ b/front-end/YouTune/src/app/shared/components/header/header.component.scss
@@ -38,8 +38,16 @@
     }
   }
 
+  &_menu {
+
+    &-item {
+      outline: none;
+    }
+  }
+
   &_user {
     font-size: 1rem;
+    outline: none;
 
     &-name {
       margin-left: 0.5rem;
