--- a/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.html
+++ b/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.html
@@ -1,24 +1,21 @@
 <div class="tuner">
   <yt-header></yt-header>
   <mat-drawer-container class="tuner_content" [hasBackdrop]="true">
-    <mat-drawer #drawer [mode]="over" class="tuner_content-side"
-      >I'm a drawer</mat-drawer
-    >
+    <mat-drawer #drawer [mode]="over" class="tuner_content-side">I'm a drawer</mat-drawer>
     <mat-drawer-content class="tuner_content-main">
+      <!-- <div class="tuner_background">
+        <img src="https://img.youtube.com/vi/8c0t1lpB1-Y/0.jpg" alt="thumbnail" />
+      </div> -->
       <!-- drawer toggle -->
-      <button mat-raised-button (click)="drawer.toggle()">
-        Toggle drawer
-      </button>
+      <!-- <button mat-raised-button (click)="drawer.toggle()"> -->
+      <!-- Toggle drawer
+      </button> -->
       <!-- drawer toggle -->
-      <div class="tuner_content-main--player">player</div>
+
       <div class="tuner_content-main--songs">
-        <div class="mat-elevation-z4 song" matRipple>
+        <div class="mat-elevation-z4 song" matRipple (click)="drawer.toggle()">
           <div class="song_img">
-            <img
-              mat-card-image
-              src="https://img.youtube.com/vi/hLB0x8Qj9Ho/0.jpg"
-              alt="thumbnail"
-            />
+            <img mat-card-image src="https://img.youtube.com/vi/8c0t1lpB1-Y/0.jpg" alt="thumbnail" />
           </div>
           <div class="song_info">
             <div class="song_info-top">
@@ -31,7 +28,23 @@
             </div>
           </div>
         </div>
+        <div class="mat-elevation-z4 song" matRipple>
+          <div class="song_img">
+            <img mat-card-image src="https://img.youtube.com/vi/eYRC14UicI0/2.jpg" alt="thumbnail" />
+          </div>
+          <div class="song_info">
+            <div class="song_info-top">
+              <span class="song_info-top--artist">Artist</span>
+              <span>&nbsp;-&nbsp;</span>
+              <span class="song_info-top--title">TitleTitleTitleTitleTitleTitle</span>
+            </div>
+            <div class="song_info-bottom">
+              <span class="song_info-bottom--genre">Genre</span>
+            </div>
+          </div>
+        </div>
       </div>
+      <div class="tuner_content-main--player">playerkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk</div>
     </mat-drawer-content>
   </mat-drawer-container>
 </div>
