--- a/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
+++ b/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
@@ -1,6 +1,7 @@
 @import '../../../../assets/scss/imports';
 
 .tuner {
+  position: relative;
   width: 100vw;
   height: 100vh;
 
@@ -14,15 +15,32 @@
 
     &-main {
       background-color: $color-tertiary;
-      padding: 1rem;
       display: flex;
+      justify-content: center;
 
       &--player {
+        margin: 2rem 1rem;
       }
 
       &--songs {
-        width: 30%;
+        width: fit-content;
+        margin: 2rem 1rem;
       }
+    }
+  }
+
+  &_background {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+
+    img {
+      display: block;
+      width: 100%;
+      object-fit: cover;
+      opacity: .3;
+
     }
   }
 }
@@ -31,13 +49,15 @@
   width: 100%;
   height: fit-content;
   display: flex;
-  align-items: center;
+  // align-items: center;
   padding: 0.5rem;
+  margin-bottom: .5rem;
   cursor: pointer;
 
   &_img {
-    width: 7rem;
-    box-shadow: 0 0 0.3rem #000;
+    width: 6rem;
+    display: block;
+    box-shadow: 0 0 0.2rem #000;
     margin-right: 1rem;
 
     img {
@@ -50,22 +70,22 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size: 1.2rem;
 
     &-top {
       display: flex;
       align-items: flex-start;
 
-      &--artist {
-      }
+      &--artist {}
 
-      &--title {
-      }
+      &--title {}
     }
 
     &-bottom {
       &--genre {
         text-transform: uppercase;
-        letter-spacing: 2px;
+        letter-spacing: 3px;
+        font-size: .7rem;
         color: $color-secondary;
       }
     }
