--- a/front-end/YouTune/src/assets/scss/_utility.scss
+++ b/front-end/YouTune/src/assets/scss/_utility.scss
@@ -21,6 +21,18 @@
   background-color: $color-primary;
 }
 
+.color-secondary {
+  background-color: $color-secondary;
+}
+
+.text-color-white {
+  color: #fff;
+}
+
+.opacity-50 {
+  opacity: 0.5;
+}
+
 .full-width {
   width: 100%;
 }
