--- a/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
+++ b/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
@@ -14,12 +14,56 @@
     }
 
     &-main {
+      position: relative;
       background-color: $color-tertiary;
-      display: flex;
-      justify-content: center;
+
+      &--wrapper {
+        display: flex;
+        justify-content: center;
+      }
+
+      &--search {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        padding: 0.5rem;
+        height: fit-content;
+
+        &--form {
+          // width: fit-content;
+          min-width: 30%;
+          margin: 0 auto;
+          display: flex;
+          align-items: center;
+
+          input {
+            width: 100%;
+            outline: none;
+            border: none;
+            box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+              0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+            font-size: 1.1rem;
+            font-family: $font-primary;
+            padding: 0 0.5rem;
+            margin: 0 0.5rem;
+            transition: all 0.3s;
+
+            &:focus {
+              border-color: $color-primary !important;
+              box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+                0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                0 3px 14px 2px rgba(0, 0, 0, 0.12);
+            }
+          }
+        }
+      }
 
       &--player {
+        max-width: 100%;
+        min-width: 30%;
         margin: 2rem 1rem;
+        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+          0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
       }
 
       &--songs {
@@ -39,8 +83,7 @@
       display: block;
       width: 100%;
       object-fit: cover;
-      opacity: .3;
-
+      opacity: 0.3;
     }
   }
 }
@@ -51,16 +94,17 @@
   display: flex;
   // align-items: center;
   padding: 0.5rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   cursor: pointer;
 
   &_img {
-    width: 6rem;
-    display: block;
+    position: relative;
+    width: 5rem;
     box-shadow: 0 0 0.2rem #000;
     margin-right: 1rem;
 
     img {
+      display: block;
       width: 100%;
     }
   }
@@ -76,18 +120,23 @@
       display: flex;
       align-items: flex-start;
 
-      &--artist {}
+      &--artist {
+      }
 
-      &--title {}
+      &--title {
+      }
     }
 
     &-bottom {
       &--genre {
         text-transform: uppercase;
         letter-spacing: 3px;
-        font-size: .7rem;
+        font-size: 0.7rem;
         color: $color-secondary;
       }
     }
   }
+}
+button {
+  outline: none;
 }
