--- a/front-end/YouTune/src/assets/scss/_utility.scss
+++ b/front-end/YouTune/src/assets/scss/_utility.scss
@@ -37,6 +37,10 @@
   width: 100%;
 }
 
+.full-height {
+  width: 100%;
+}
+
 // 100% width and height container
 .full-width-height {
   width: 100%;
