--- a/front-end/YouTune/src/app/tuner/components/player/player.component.scss
+++ b/front-end/YouTune/src/app/tuner/components/player/player.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../assets/scss/imports';
+
 .player {
   display: flex;
   flex-direction: column;
@@ -15,10 +16,14 @@
   }
 
   &_controls {
+    display: flex;
+    flex-direction: column;
     width: 100%;
 
     &-seeker {
       width: 100%;
+      // height: 2rem;
+      align-self: flex-start;
     }
 
     &-panel {
