--- a/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.html
+++ b/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.html
@@ -2,11 +2,7 @@
   <yt-header></yt-header>
   <mat-drawer-container class="tuner_content" [hasBackdrop]="true">
     <mat-drawer #drawer [mode]="over" class="tuner_content-side">
-      <button
-        mat-raised-button
-        (click)="drawer.toggle()"
-        class="color-secondary text-color-white"
-      >
+      <button mat-raised-button (click)="drawer.toggle()" class="color-secondary text-color-white">
         <i class="fas fa-chevron-left"></i>
         &nbsp;Playlists
       </button>
@@ -22,11 +18,7 @@
       <!-- drawer toggle -->
 
       <mat-toolbar class="tuner_content-main--search">
-        <button
-          mat-raised-button
-          (click)="drawer.toggle()"
-          class="color-secondary text-color-white"
-        >
+        <button mat-raised-button (click)="drawer.toggle()" class="color-secondary text-color-white">
           Playlists&nbsp;<i class="fas fa-chevron-right"></i>
         </button>
         <form class="tuner_content-main--search--form">
@@ -41,14 +33,8 @@
         <div class="tuner_content-main--songs">
           <div class="mat-elevation-z4 song" matRipple>
             <div class="song_img">
-              <i
-                class="fas fa-play fa-lg absolute-center text-color-white opacity-50"
-              ></i>
-              <img
-                mat-card-image
-                src="https://img.youtube.com/vi/8c0t1lpB1-Y/0.jpg"
-                alt="thumbnail"
-              />
+              <i class="fas fa-play fa-lg absolute-center text-color-white opacity-50"></i>
+              <img mat-card-image src="https://img.youtube.com/vi/8c0t1lpB1-Y/0.jpg" alt="thumbnail" />
             </div>
             <div class="song_info">
               <div class="song_info-top">
@@ -63,18 +49,12 @@
           </div>
           <div class="mat-elevation-z4 song" matRipple>
             <div class="song_img">
-              <i
-                class="fas fa-play fa-lg absolute-center text-color-white opacity-50"
-              ></i>
-              <img
-                mat-card-image
-                src="https://img.youtube.com/vi/eYRC14UicI0/2.jpg"
-                alt="thumbnail"
-              />
+              <i class="fas fa-play fa-lg absolute-center text-color-white opacity-50"></i>
+              <img mat-card-image src="https://img.youtube.com/vi/eYRC14UicI0/2.jpg" alt="thumbnail" />
             </div>
             <div class="song_info">
               <div class="song_info-top">
-                <span class="song_info-top--artist">Artist</span>
+                <span class="song_info-top--artist">Artist </span>
                 <span>&nbsp;-&nbsp;</span>
                 <span class="song_info-top--title">TitleTitle</span>
               </div>
@@ -89,5 +69,6 @@
         </div>
       </div>
     </mat-drawer-content>
+
   </mat-drawer-container>
 </div>
