--- a/front-end/YouTune/src/app/tuner/components/player/player.component.scss
+++ b/front-end/YouTune/src/app/tuner/components/player/player.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  background-color: $color-tertiary;
 
   &_video {
     width: 100%;
@@ -16,14 +17,18 @@
   }
 
   &_controls {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 100%;
 
     &-seeker {
       width: 100%;
-      // height: 2rem;
       align-self: flex-start;
+
+      &--slider {
+        padding: 0 .5rem !important;
+      }
     }
 
     &-panel {
@@ -31,6 +36,10 @@
       justify-content: space-evenly;
       align-items: center;
       padding: 0.2rem;
+
+      &--volume {
+        width: 30%;
+      }
 
       &--time {
         display: flex;
