--- a/front-end/YouTune/src/app/tuner/components/player/player.component.html
+++ b/front-end/YouTune/src/app/tuner/components/player/player.component.html
@@ -4,8 +4,8 @@
   </div>
   <div class="player_controls">
     <div class="player_controls-seeker">
-      <mat-slider class="full-width" color="primary" min="0" [max]="videoDuration" step="1" [value]="videoCurrentTime"
-        #durationSlider (input)="seek(durationSlider)"></mat-slider>
+      <mat-slider class="player_controls-seeker--slider" color="primary" min="0" [max]="videoDuration" step="1"
+        [value]="videoCurrentTime" #durationSlider (input)="seek(durationSlider)"></mat-slider>
     </div>
     <mat-divider></mat-divider>
     <div class="player_controls-panel">
@@ -18,8 +18,8 @@
         <i class="fas fa-volume-up" *ngIf="!muted"></i>
         <i class="fas fa-volume-mute" *ngIf="muted"></i>
       </button>
-      <mat-slider class="player_controls-panel--volume" color="primary" min="0" max="100" step="1" value="100"
-        #volumeSlider (input)="volume(volumeSlider)">
+      <mat-slider class="player_controls-panel--volume" color="primary" [thumbLabel]="volumeSlider.value" min="0"
+        max="100" step="1" value="100" #volumeSlider (input)="volume(volumeSlider)">
       </mat-slider>
 
       <div class="player_controls-panel--time full-width">
