--- a/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
+++ b/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
@@ -15,11 +15,8 @@
 
     &-main {
       position: relative;
-      // background-color: $color-tertiary;
-      // background-image: url('../../../../assets/images/logo.png');
-      // background-repeat: no-repeat;
-      // background-size: contain;
-      // background-position: center;
+      background-color: $color-tertiary;
+
 
       &--search {
         display: flex;
@@ -58,17 +55,36 @@
       }
 
       &--wrapper {
+        position: relative;
         display: flex;
         justify-content: center;
+        height: calc(100% - #{$header-height});
 
         @media screen and (max-width:670px) {
           flex-direction: column;
+        }
+
+        &--background {
+          position: absolute;
+          z-index: -1;
+          top: 0;
+          width: 100%;
+          height: 100%;
+
+          // background-image: url('../../../../assets/images/logo.png');
+          // background-repeat: no-repeat;
+          // background-size: cover;
+          // background-position: center;
+          opacity: 0.4;
+
+
         }
       }
 
       &--player {
         max-width: 100%;
         min-width: 30%;
+        height: fit-content;
         margin: 2rem 1rem;
         box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
           0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
@@ -85,20 +101,7 @@
     }
   }
 
-  &_background {
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    width: 100%;
-    height: calc(100% - #{$header-height});
 
-    img {
-      display: block;
-      width: 100%;
-      object-fit: contain;
-      opacity: 0.3;
-    }
-  }
 }
 
 .song {
