--- a/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.html
+++ b/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.html
@@ -59,9 +59,12 @@
         <div class="tuner_content-main--player">
           <yt-player></yt-player>
         </div>
-        <!-- <div class="tuner_content-main--wrapper--background"
-          [ngStyle]="{backgroundImage: 'url(https://img.youtube.com/vi/eYRC14UicI0/0.jpg)', backgroundSize: 'cover'}">
+        <!-- decoration -->
+        <!-- <div class="tuner_decoration">
+          <div class="tuner_decoration-blue"></div>
+          <div class="tuner_decoration-grey"></div>
         </div> -->
+        <!-- decoration -->
       </div>
     </mat-drawer-content>
   </mat-drawer-container>
