--- a/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
+++ b/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
@@ -15,7 +15,7 @@
 
     &-main {
       position: relative;
-      background-color: $color-tertiary;
+      // background-color: $color-tertiary;
 
 
       &--search {
@@ -58,26 +58,10 @@
         position: relative;
         display: flex;
         justify-content: center;
-        height: calc(100% - #{$header-height});
+        height: calc(100vh - #{$header-height} - 3.3rem);
 
-        @media screen and (max-width:670px) {
+        @media screen and (max-width:630px) {
           flex-direction: column;
-        }
-
-        &--background {
-          position: absolute;
-          z-index: -1;
-          top: 0;
-          width: 100%;
-          height: 100%;
-
-          // background-image: url('../../../../assets/images/logo.png');
-          // background-repeat: no-repeat;
-          // background-size: cover;
-          // background-position: center;
-          opacity: 0.4;
-
-
         }
       }
 
@@ -89,7 +73,7 @@
         box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
           0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
-        @media screen and (max-width:670px) {
+        @media screen and (max-width:630px) {
           min-width: 90%;
         }
       }
@@ -154,4 +138,31 @@
 
 button {
   outline: none;
+}
+
+.tuner_decoration {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+
+  &-blue {
+    position: relative;
+    width: 50%;
+    height: 100%;
+    // background-color: $color-primary;
+    background: linear-gradient(180deg, rgba($color-primary, .1), rgba($color-primary, .5));
+
+    box-shadow: .3rem .1rem .5rem rgba(0, 0, 0, 0.4);
+  }
+
+  &-grey {
+    position: relative;
+    width: 50%;
+    height: 100%;
+    // background-color: $color-secondary;
+    background: linear-gradient(180deg, rgba($color-secondary, .2), rgba($color-secondary, .8));
+  }
 }
