--- a/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
+++ b/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
@@ -80,7 +80,14 @@
 
       &--songs {
         width: fit-content;
+        padding: .5rem;
         margin: 2rem 1rem;
+        max-height: 100%;
+        overflow-y: scroll;
+
+        @media screen and (max-width:630px) {
+          min-width: 90%;
+        }
       }
     }
   }
@@ -88,53 +95,6 @@
 
 }
 
-.song {
-  width: 100%;
-  height: fit-content;
-  display: flex;
-  background-color: $color-tertiary;
-  padding: 0.5rem;
-  margin-bottom: 0.5rem;
-  cursor: pointer;
-
-  &_img {
-    position: relative;
-    width: 5rem;
-    box-shadow: 0 0 0.2rem #000;
-    margin-right: 1rem;
-
-    img {
-      display: block;
-      width: 100%;
-    }
-  }
-
-  &_info {
-    font-weight: 600;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-size: 1.2rem;
-
-    &-top {
-      display: flex;
-      align-items: flex-start;
-
-      &--artist {}
-
-      &--title {}
-    }
-
-    &-bottom {
-      &--genre {
-        text-transform: uppercase;
-        letter-spacing: 3px;
-        font-size: 0.7rem;
-        color: $color-secondary;
-      }
-    }
-  }
-}
 
 button {
   outline: none;
