--- a/front-end/YouTune/src/styles.scss
+++ b/front-end/YouTune/src/styles.scss
@@ -13,6 +13,30 @@ html {
   margin: 0;
 }
 
+// CUSTOM SCROLLBAR
+::-webkit-scrollbar {
+  width: .5rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 .3rem grey;
+  // border-radius: .5rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+
+  background: $color-primary;
+  border-radius: .5rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $color-secondary;
+}
+
+
 // OVERRIDING BOOTSTRAP STYLES
 .form-control {
   transition: all 0.3s !important;
