--- a/front-end/YouTune/src/app/tuner/components/player/player.component.html
+++ b/front-end/YouTune/src/app/tuner/components/player/player.component.html
@@ -20,8 +20,8 @@
         <i class="fas fa-volume-up" *ngIf="!muted"></i>
         <i class="fas fa-volume-mute" *ngIf="muted"></i>
       </button>
-      <mat-slider class="player_controls-panel--volume" color="primary" [thumbLabel]="volumeSlider.value" min="0"
-        max="100" step="1" value="100" #volumeSlider (input)="volume(volumeSlider)">
+      <mat-slider class="player_controls-panel--volume" color="primary" [thumbLabel]="thumbLabelValue" min="0" max="100"
+        step="1" value="100" #volumeSlider (input)="volume(volumeSlider)">
       </mat-slider>
 
       <div class="player_controls-panel--time full-width">
