--- a/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
+++ b/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
@@ -10,7 +10,12 @@
     height: calc(100% - #{$header-height});
 
     &-side {
-      padding: 1rem;
+      padding: .5rem;
+      overflow: hidden;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
+
     }
 
     &-main {
@@ -58,10 +63,13 @@
         position: relative;
         display: flex;
         justify-content: center;
-        height: calc(100vh - #{$header-height} - 3.3rem);
+        height: calc(100vh - #{$header-height} - 3.33rem);
+
+        // background-color: rgba($color-primary, .3);
 
         @media screen and (max-width:630px) {
           flex-direction: column;
+          align-items: center;
         }
       }
 
@@ -75,18 +83,23 @@
 
         @media screen and (max-width:630px) {
           min-width: 90%;
+          margin: 1rem .5rem 1rem .5rem;
         }
       }
 
       &--songs {
         width: fit-content;
-        padding: .5rem;
+        padding: .5rem 1rem;
         margin: 2rem 1rem;
         max-height: 100%;
         overflow-y: scroll;
+        background-color: $color-tertiary;
+        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+          0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
         @media screen and (max-width:630px) {
-          min-width: 90%;
+          max-width: 90%;
+          margin: 1rem .5rem .5rem 1rem;
         }
       }
     }
@@ -125,4 +138,8 @@ button {
     // background-color: $color-secondary;
     background: linear-gradient(180deg, rgba($color-secondary, .2), rgba($color-secondary, .8));
   }
+}
+
+.mat-drawer-inner-container {
+  overflow: hidden !important;
 }
