--- a/front-end/YouTune/src/styles.scss
+++ b/front-end/YouTune/src/styles.scss
@@ -20,13 +20,12 @@ html {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 .3rem grey;
+  // box-shadow: inset 0 0 .3rem grey;
   // border-radius: .5rem;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-
   background: $color-primary;
   border-radius: .5rem;
 }
@@ -34,6 +33,7 @@ html {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: $color-secondary;
+  cursor: pointer;
 }
 
 
@@ -92,4 +92,6 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
+  transition: all .3s;
+  background-color: rgba($color-tertiary, 0.5);
 }
