--- a/front-end/YouTune/src/app/tuner/components/playlists-collection/playlists-collection.component.html
+++ b/front-end/YouTune/src/app/tuner/components/playlists-collection/playlists-collection.component.html
@@ -1,4 +1,11 @@
 <div class="playlists-collection">
+  <div class="playlists-collection_playlist rounded" matRipple>
+    <div class="playlists-collection_playlist-logo">
+      <img class="opacity-50" src="../../../../assets/images/playlist-logo-new.png" alt="playlist logo">
+      <i class="fas fa-plus fa-4x playlists-collection_playlist-logo--icon"></i>
+    </div>
+    <div class="playlists-collection_playlist-title">New playlist</div>
+  </div>
   <div class="playlists-collection_playlist rounded" matRipple *ngFor="let i of testLength">
     <div class="playlists-collection_playlist-logo">
       <img src="../../../../assets/images/playlist-logo.png" alt="playlist logo">
