--- a/front-end/YouTune/src/app/tuner/components/playlists-collection/playlists-collection.component.scss
+++ b/front-end/YouTune/src/app/tuner/components/playlists-collection/playlists-collection.component.scss
@@ -2,37 +2,46 @@
 
 .playlists-collection {
   margin-top: 1rem;
+  width: fit-content;
   height: calc(100vh - #{$header-height} - 4.5rem);
   overflow-y: scroll;
-  //   box-shadow: 0 0 1rem rgba(0, 0, 0, .4) inset;
 
   &_playlist {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: fit-content;
     white-space: nowrap;
     padding: .5rem;
     margin: .6rem;
     box-shadow: $google-shadow;
     cursor: pointer;
+    color: $color-secondary;
 
     &-logo {
+      position: relative;
       width: 8rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       img {
         display: block;
         width: 100%;
+      }
+
+      &--icon {
+        position: absolute;
+        top: 40%;
+        left: 40%;
+        text-shadow: $text-shadow-sm;
       }
     }
 
     &-title {
       text-transform: uppercase;
       letter-spacing: 3px;
-      // font-size: 0.7rem;
       padding: .25rem;
-      color: $color-secondary;
     }
   }
 
