--- a/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
+++ b/front-end/YouTune/src/app/tuner/components/tuner/tuner.component.scss
@@ -11,11 +11,7 @@
 
     &-side {
       padding: .5rem;
-      overflow: hidden;
-      // display: flex;
-      // flex-direction: column;
-      // justify-content: center;
-
+      width: fit-content;
     }
 
     &-main {
@@ -93,9 +89,7 @@
         margin: 2rem 1rem;
         max-height: 100%;
         overflow-y: scroll;
-        background-color: $color-tertiary;
-        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-          0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+        // background-color: $color-tertiary;
 
         @media screen and (max-width:630px) {
           max-width: 90%;
