--- a/YT_FE/src/app/components/register-form/register-form.component.html
+++ b/YT_FE/src/app/components/register-form/register-form.component.html
@@ -1,30 +1,66 @@
-<div class="register absolute-center">
-  <form class="register_form rounded" [formGroup]="registerFrom" (ngSubmit)="onRegister()">
+<div class="credentials absolute-center">
+  <form
+    class="credentials_form rounded"
+    [formGroup]="registerFrom"
+    (ngSubmit)="onRegister()"
+  >
     <div class="form-group">
       <mat-form-field class="full-width">
-        <input matInput type="text" placeholder="Username" formControlName="username" />
+        <input
+          matInput
+          type="text"
+          placeholder="Username"
+          formControlName="username"
+        />
       </mat-form-field>
     </div>
     <div class="form-group">
       <mat-form-field class="full-width">
-        <input matInput type="password" placeholder="Password" formControlName="password" />
+        <input
+          matInput
+          type="password"
+          placeholder="Password"
+          formControlName="password"
+        />
       </mat-form-field>
     </div>
     <div class="form-group">
       <mat-form-field class="full-width">
-        <input matInput type="email" placeholder="Email" formControlName="email" />
+        <input
+          matInput
+          type="email"
+          placeholder="Email"
+          formControlName="email"
+        />
       </mat-form-field>
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <small id="emailHelp" class="form-text text-muted"
+        >We'll never share your email with anyone else.</small
+      >
     </div>
 
-    <button type="submit" mat-raised-button color="primary" matTooltip="Click the button to submit the form">
+    <button
+      type="submit"
+      mat-raised-button
+      color="primary"
+      matTooltip="Click the button to submit the form"
+    >
       Register
     </button>
+
+    <span
+      #error
+      [@domFader]="error"
+      *ngIf="errorMessage !== undefined"
+      class="credentials_form-error form-text "
+    >
+      {{ errorMessage }}
+    </span>
+
     <div #s class="spinner" [@domFader]="s" *ytSpinnerToggle>
       <mat-spinner aria-label="loading content"></mat-spinner>
     </div>
   </form>
-  <p class="register_info">
+  <p class="credentials_info">
     Fill in the form to register.
   </p>
 </div>
