--- a/YT_FE/src/app/components/welcome/welcome.component.scss
+++ b/YT_FE/src/app/components/welcome/welcome.component.scss
@@ -1,60 +1,62 @@
 @import '../../../assets/scss/imports';
 
 .welcome {
-  position: relative;
-  display: flex;
-  width: 100%;
-  height: 100%;
+   position: relative;
+   display: flex;
+   width: 100%;
+   height: 100%;
 
-  &_blue {
-    position: relative;
-    width: 50%;
-    height: 100%;
-    background-color: $color-primary;
-    box-shadow: .3rem .1rem .7rem rgba(0, 0, 0, 0.4);
+   &_blue {
+      position: relative;
+      z-index: -1;
+      width: 50%;
+      height: 100%;
+      background-color: $color-primary;
+      box-shadow: 0.3rem 0.1rem 0.7rem rgba(0, 0, 0, 0.3);
 
-    &-you {
-      display: flex;
-      position: absolute;
-      top: 0;
-      right: 0;
-      font-weight: 700;
-      font-size: 4rem;
-      color: $color-secondary;
-      text-shadow: $text-shadow-lg;
+      &-you {
+         display: flex;
+         position: absolute;
+         top: 0;
+         right: 0;
+         font-weight: 700;
+         font-size: 4rem;
+         padding: 0 0.2rem;
+         color: $color-secondary;
+         text-shadow: $text-shadow-lg, $text-shadow-ultra-sm;
 
-      &--logo {
-        margin-left: auto;
-        width: 4rem;
+         &--logo {
+            margin-left: auto;
+            width: 4rem;
 
-        &--img {
-          width: 100%;
-        }
+            &--img {
+               width: 100%;
+            }
+         }
       }
-    }
-  }
+   }
 
-  &_grey {
-    position: relative;
-    // z-index: -1;
-    width: 50%;
-    height: 100%;
-    background-color: $color-secondary;
+   &_grey {
+      position: relative;
+      z-index: -2;
+      width: 50%;
+      height: 100%;
+      background-color: $color-secondary;
 
-    &-tune {
-      position: absolute;
-      top: 0;
-      left: 0;
-      font-weight: 700;
-      font-size: 4rem;
-      color: $color-primary;
-      text-shadow: $text-shadow-lg;
-    }
-  }
+      &-tune {
+         position: absolute;
+         top: 0;
+         left: 0;
+         font-weight: 700;
+         font-size: 4rem;
+         padding: 0 0.2rem;
+         color: $color-primary;
+         text-shadow: $text-shadow-lg, $text-shadow-ultra-sm;
+      }
+   }
 
-  &_router-outlet {
-    width: 100%;
-    height: 100%;
-  }
-
+   &_router-outlet {
+      width: 100%;
+      height: 100%;
+   }
 }
