--- a/YT_FE/src/app/tuner/components/player/player.component.html
+++ b/YT_FE/src/app/tuner/components/player/player.component.html
@@ -1,39 +1,55 @@
-<div class="player ">
-  <div class="player_video embed-responsive embed-responsive-16by9">
-    <div id="player"></div>
-  </div>
-  <div class="player_controls">
-    <div class="player_controls-seeker">
-      <mat-slider class="player_controls-seeker--slider" color="primary" min="0" [max]="videoDuration" step="1"
-        [value]="videoCurrentTime" #durationSlider (input)="seek(durationSlider)"
-        (mouseover)="test($event,durationSlider)">
-      </mat-slider>
-    </div>
-    <mat-divider></mat-divider>
-    <div class="player_controls-panel">
-      <button mat-raised-button (click)="playToggle()">
-        <i class="fas fa-play" *ngIf="paused"></i>
-        <i class="fas fa-pause" *ngIf="!paused"></i>
-      </button>
-
-      <button mat-raised-button (click)="mute(volumeSlider)">
-        <i class="fas fa-volume-up" *ngIf="!muted"></i>
-        <i class="fas fa-volume-mute" *ngIf="muted"></i>
-      </button>
-      <mat-slider class="player_controls-panel--volume" color="primary" [thumbLabel]="thumbLabelValue" min="0" max="100"
-        step="1" value="100" #volumeSlider (input)="volume(volumeSlider)">
-      </mat-slider>
-
-      <div class="player_controls-panel--time full-width">
-        <span>{{ videoCurrentTime | secondsFormat}}</span>
-        <span>&nbsp;/&nbsp;</span>
-        <span>{{ videoDuration | secondsFormat }}</span>
+<div class="player rounded">
+   <div class="player_video embed-responsive embed-responsive-16by9">
+      <div id="player"></div>
+   </div>
+   <div class="player_controls">
+      <div class="player_controls-seeker">
+         <mat-slider
+            class="player_controls-seeker--slider"
+            color="primary"
+            min="0"
+            [max]="videoDuration"
+            step="1"
+            [value]="videoCurrentTime"
+            #durationSlider
+            (input)="seek(durationSlider)"
+            (mouseover)="test($event, durationSlider)"
+         >
+         </mat-slider>
       </div>
-      <!-- spinner -->
-      <div #s class="spinner" [@domFader]="s" *ytSpinnerToggle>
-        <mat-spinner aria-label="loading content"></mat-spinner>
-      </div>
-    </div>
+      <mat-divider></mat-divider>
+      <div class="player_controls-panel">
+         <button mat-raised-button (click)="playToggle()">
+            <i class="fas fa-play" *ngIf="paused"></i>
+            <i class="fas fa-pause" *ngIf="!paused"></i>
+         </button>
 
-  </div>
+         <button mat-raised-button (click)="mute(volumeSlider)">
+            <i class="fas fa-volume-up" *ngIf="!muted"></i>
+            <i class="fas fa-volume-mute" *ngIf="muted"></i>
+         </button>
+         <mat-slider
+            class="player_controls-panel--volume"
+            color="primary"
+            [thumbLabel]="thumbLabelValue"
+            min="0"
+            max="100"
+            step="1"
+            value="100"
+            #volumeSlider
+            (input)="volume(volumeSlider)"
+         >
+         </mat-slider>
+
+         <div class="player_controls-panel--time full-width">
+            <span>{{ videoCurrentTime | secondsFormat }}</span>
+            <span>&nbsp;/&nbsp;</span>
+            <span>{{ videoDuration | secondsFormat }}</span>
+         </div>
+         <!-- spinner -->
+         <div #s class="spinner" [@domFader]="s" *ytSpinnerToggle>
+            <mat-spinner aria-label="loading content"></mat-spinner>
+         </div>
+      </div>
+   </div>
 </div>
