--- a/YT_FE/src/assets/scss/_variables.scss
+++ b/YT_FE/src/assets/scss/_variables.scss
@@ -4,12 +4,11 @@ $color-primary: #3f51b5;
 $color-secondary: #505050;
 $color-tertiary: #ffffff;
 
-$error-message-color:#f44336;
+$error-message-color: #f44336;
 
 // SHADOWS
 $google-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.4),
-0 6px 10px 0 rgba(0, 0, 0, 0.2),
-0 1px 18px 0 rgba(0, 0, 0, 0.2);
+   0 6px 10px 0 rgba(0, 0, 0, 0.2), 0 1px 18px 0 rgba(0, 0, 0, 0.2);
 
 $box-shadow-lg: 0 0.2rem 1.25rem rgba(0, 0, 0, 0.7);
 $box-shadow-md: 0 0.2rem 1rem rgba(0, 0, 0, 0.7);
@@ -19,11 +18,10 @@ $box-shadow-vsm: 0 0.2rem 0.25rem rgba(0, 0, 0, 0.7);
 $text-shadow-lg: -0.2rem 0.2rem 0.7rem rgba(0, 0, 0, 0.7);
 $text-shadow-md: -0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.7);
 $text-shadow-sm: -0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.7);
-
+$text-shadow-ultra-sm: 0 0 1px rgba(0, 0, 0, 0.7);
 // FONTS
 
-$font-primary: 'Titillium Web',
-sans-serif !important;
+$font-primary: 'Titillium Web', sans-serif !important;
 
 // RANDOM
 
